# EmbenautsEmbeddedCMakeBlog

./: .gitignore  LICENSE  README.md
01_ToolchainFiles/: 01_toolchain_files.md  cmake-toolchain-embedded-post.md  toolchain-post-notes-and-conclusions.md
01_ToolchainFiles/ApproachA_PlatformInToolchain/: CMakeLists.txt  README.md  tiarmclang-cortex-r5.toolchain.cmake
01_ToolchainFiles/ApproachA_PlatformInToolchain/src/: hello.c  hello.cpp  main.cpp
01_ToolchainFiles/ApproachB_PlatformAsTarget/: AM243xPlatform.cmake  CMakeLists.txt  README.md
01_ToolchainFiles/ApproachB_PlatformAsTarget/src/: hello.c  hello.cpp
02_PlatformTargetWrappers/: 02_platform_target_wrappers.md
02_PlatformTargetWrappers/Case1Example/: CMakeLists.txt
02_PlatformTargetWrappers/Case1Example/Cmake/: DeviceLinkerScript.cmake  EmbeddedExecutable.cmake  Toolchain.cmake  ToolchainHostTest.cmake  ValidateLinkerScripts.cmake
02_PlatformTargetWrappers/Case1Example/Linker/: Device.ld
02_PlatformTargetWrappers/Case1Example/Src/: main.c
02_PlatformTargetWrappers/Case1Example/cmake/: DeviceLinkerScript.cmake  EmbeddedExecutable.cmake  Toolchain.cmake
02_PlatformTargetWrappers/Case1Example/src/: main.c  mylib.c
02_PlatformTargetWrappers/Case2Example/: CMakeLists.txt
02_PlatformTargetWrappers/Case2Example/cmake/: Platform_AM243x.cmake  Toolchain.cmake  ValidatePlatformTargets.cmake
02_PlatformTargetWrappers/Case2Example/linker/: am243x.ld
02_PlatformTargetWrappers/Case2Example/src/: main.c  mylib.c
02_PlatformTargetWrappers/Case3Example/: CMakeLists.txt  TestPlan.md
02_PlatformTargetWrappers/Case3Example/cmake/: EmbeddedLinkerScript.cmake  EmbeddedPlatform.cmake  EmbeddedTargets.cmake  Platform_AM243x.cmake  Platform_TMS570.cmake  Toolchain.cmake
02_PlatformTargetWrappers/Case3Example/linker/: am243x_external.ld  am243x_internal.ld  tms570_external.ld  tms570_internal.ld
02_PlatformTargetWrappers/Case3Example/src/: main.c  mylib.c
CMakePlayground/CustomTransitiveProperties/: CMakeLists.txt  README.md  another.c  another_main.c  app_lib.c  intermediate.c  main.c
CMakePlayground/MultiplePlatformsInOneBuild/: AM243xPlatform.cmake  CMakeLists.txt  MSPM0Platform.cmake  README.md  TMS570Platform.cmake  mylib.h  tiarmclang.toolchain.cmake
CMakePlayground/MultiplePlatformsInOneBuild/imported_target_test/consumer/: CMakeLists.txt  main.c
CMakePlayground/MultiplePlatformsInOneBuild/imported_target_test/toolchains/: am243x.cmake  tms570.cmake
CMakePlayground/MultiplePlatformsInOneBuild/src/: mylib_consumer.cpp
CMakePlayground/ToolchainFileNoPlatform/: CMakeLists.txt  tiarmclang-toolchain.cmake
CMakePlayground/ToolchainFileNoPlatform/src/: hello.cpp
